update: content fixes

--- a/about/index.html
+++ b/about/index.html
@@ -97,22 +97,21 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 				teams.
 			</p>
 			<p>
-				He carried out designing the overall systems, building APIs, database optimization, clean code, and building the
-				platform for the team.
+				He carried out designing the overall systems, building APIs, database optimization, clean code, bringing
+				standarization and building the platform for the team.
 			</p>
 
 			<h2 id="skills">Skills</h2>
 
 			<p>Ashok is having a solid understanding of Computer Science Engineering. He has developed scalable web
-				applications for
-				various domains with strong hold on <strong>C++</strong>, <strong>JavaScript</strong> and
+				applications for various domains with strong hold on <strong>JavaScript</strong>, <strong>C++</strong> and
 				<strong>Golang</strong></p>
 
 			<p>Listed down are his core areas of interest:</p>
 
 			<ul>
 				<li>System Design (Solution Architect)</li>
-				<li>Distributed Systems (Databased, Distributed Operating Systems)</li>
+				<li>Distributed Systems (Database, Distributed Operating Systems)</li>
 				<li>General Science (Physics and Biology)</li>
 			</ul>
 
@@ -127,20 +126,20 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 			</p>
 
 			<ul>
-				<li><a href="https://knaxus.in">Knaxus</a></li>
-				<li><a href="https://shredx.work">ShredX</a></li>
+				<li><a href="https://knaxus.in" target="_blank">Knaxus</a></li>
+				<li><a href="https://shredx.work" target="_blank">ShredX</a></li>
 			</ul>
 
 			<h2 id="experience">Experience</h2>
 
 			<p>Ashok started his journey of builidng software products after graduating with B.Tech in Computer Science &amp;
-				Engineering in 2016. Since then he is on his mission of learning building and, shapping software applications
-				and tech teams as well. Here’s the footprints of his experiences so far:</p>
+				Engineering in 2016. Since then he is on a mission of learning building and, shapping software applications
+				and tech teams for startups. Here’s the footprints of his experiences so far:</p>
 
 			<ul>
-				<li>Senior Software Engineer, Daalchini - Internet of Things</li>
-				<li>Senior Software Engineer, Oriserve - Enterprise Chatbots</li>
-				<li>Senior Software Engineer, Classplus - Education</li>
+				<li>Product Engineer, Daalchini</li>
+				<li>Senior Software Engineer, Oriserve</li>
+				<li>Senior Software Engineer, Classplus</li>
 			</ul>
 
 			<h2 id="on-the-internet">On the Internet</h2>
@@ -149,8 +148,7 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 					href="https://www.linkedin.com/in/ashokdey/">LinkedIN</a> and <a
 					href="https://twitter.com/intent/follow?screen_name=ashokdey_">Twitter</a></p>
 
-			<p>Feel free to contact him at: <strong><a
-						href="&#109;&#097;&#105;&#108;&#116;&#111;:&#047;&#047;&#097;&#100;&#064;&#097;&#115;&#104;&#111;&#107;&#100;&#101;&#121;&#046;&#105;&#110;">ad@ashokdey.in</a></strong>
+			<p>Feel free to contact him at: <strong><a href="mailto:ad@ashokdey.in">ad@ashokdey.in</a></strong>
 			</p>
 			<hr />
 		</article>
