--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		Ashok Dey | Home
 	</title>
 	<meta name="description"
-		content=" Ashok Dey is a product engineer who has built, maintained and scaled 3+ software applications">
+		content=" Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS software applications">
 
 	<!-- icons -->
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -22,28 +22,28 @@
 
 	<!-- og tags -->
 	<meta property="og:site_name" content="">
-	<meta property="og:title" content="">
+	<meta property="og:title" content="Ashok Dey - Product Engineer">
 	<meta property="og:locale" content="en">
 	<meta property="og:image" content="">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="">
+	<meta property="og:url" content="https://ashokdey.com">
 	<meta property="og:description" content="
-Ashok Dey is a product engineer who has built, maintained and scaled 3+ software applications
+Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS software applications from scratch for startups in various domains
 ">
 	<!-- /og tags -->
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="/js/modernizr.js"></script>
-	<script src="/js/fitvids.js"></script>
+	<script src="js/modernizr.js"></script>
+	<script src="js/fitvids.js"></script>
 	<link
 		href='//fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Source+Sans+Pro:600,900|Crimson+Text:700italic,600,600italic,400,700,400italic'
 		rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="/css/reset.css">
-	<link rel="stylesheet" href="/css/pygments.css">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/pygments.css">
 
-	<link rel="stylesheet" href="/css/font-awesome.css">
+	<link rel="stylesheet" href="css/font-awesome.css">
 
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<!--[if gte IE 9]>
   <style type="text/css">
     .gradient {
@@ -61,8 +61,7 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 
 	<div class="wrap">
 		<header>
-			<a href="/" class="website-title">
-			</a>
+			<a href="/" class="website-title"></a>
 			<nav>
 				<a href="/">Home</a>
 				<a href="/about">About</a>
@@ -86,8 +85,7 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 			<p>
 				All my open project repositories are located
 				on <strong><a href="https://github.com/ashokdey" target="_blank">GitHub (ashokdey)</a></strong>. We can interact
-				(almost about
-				anything) over my email <strong><a href="mailto://ad@ashokdey.in">ad@ashokdey.in</a></strong>
+				(almost about anything) over my email <strong><a href="mailto:ad@ashokdey.in">ad@ashokdey.in</a></strong>
 			</p>
 
 		</article>
