--- a/resume/index.html
+++ b/resume/index.html
@@ -20,7 +20,6 @@
 	<link rel="icon" type="image/x-icon" href="favicon.png" />
 </head>
 
-
 <body class="theme-default">
 
 	<div class="wrapper" itemscope itemtype="http://schema.org/Person">
@@ -29,25 +28,17 @@
 
 		<header class="page-header">
 
-
-
 			<h1 class="header-name" itemprop="name">Ashok Dey</h1>
-
 
 			<div class="header-contact-info">
 				<p>India • ad@ashokdey.in</p>
 			</div>
 
-
 			<div class="title-bar no-print">
-
 				<h2 class="header-title" itemprop="jobTitle">Product Engineer</h2>
-
 				<!-- This is the markup for the icon links; moved out to an include because it's very verbose -->
-
 				<ul class="icon-links">
 					<!-- LinkedIn link -->
-
 					<li class="icon-link-item"><a target="_blank" href="https://www.linkedin.com/in/ashokdey" class="icon-link"
 							itemprop="sameAs"><svg class="icon" xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 28 28"
@@ -60,10 +51,7 @@
   c-0.57,0-1.02,0.45-1.02,1v11.96c0,0.55,0.46,1,1.02,1h11.82c0.57,0,1.02-0.45,1.02-1V8.02z" />
 							</svg>
 						</a></li>
-
-
 					<!-- GitHub link -->
-
 					<li class="icon-link-item"><a target="_blank" href="https://github.com/ashokdey/" class="icon-link"
 							itemprop="sameAs"><svg class="icon" xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 28 28"
@@ -77,10 +65,7 @@
   c0,1.87-0.02,3.39-0.02,3.84c0,0.37,0.25,0.81,0.96,0.67c5.56-1.86,9.58-7.11,9.58-13.3C28.03,6.28,21.75,0,14.01,0z" />
 							</svg>
 						</a></li>
-
-
 					<!-- Twitter link -->
-
 					<li class="icon-link-item"><a target="_blank" href="https://twitter.com/intent/follow?screen_name=ashokdey_"
 							class="icon-link" itemprop="sameAs"><svg class="icon" xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 28 28"
@@ -94,12 +79,9 @@
   C21.95,9.47,21.37,10.08,20.69,10.57z" />
 							</svg>
 						</a></li>
-
-
 					<!-- Medium link -->
-
-					<li class="icon-link-item">
-						<a target="_blank" href="/blog" class="icon-link" itemprop="url"><svg class="icon"
+					<!-- <li class="icon-link-item">
+						<a target="_blank" href="#" class="icon-link" itemprop="url"><svg class="icon"
 								xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								viewBox="0 0 28 28" enable-background="new 0 0 28 28" xml:space="preserve" width="28">
 								<path id="Medium" fill="#D1CECC" d="M14,0C6.3,0,0,6.3,0,14s6.3,14,14,14s14-6.3,14-14S21.7,0,14,0z M11.2,19.5H7v-0.2l1.5-1.8
@@ -108,15 +90,10 @@
 	l1.5,1.8C11.2,19.3,11.2,19.5,11.2,19.5z" />
 							</svg>
 						</a>
-					</li>
-
+					</li> -->
 
 					<!-- Dribbble link -->
-
-
 					<!-- Facebook link -->
-
-
 					<!-- Instagram link -->
 
 					<li class="icon-link-item"><a target="_blank" href="https://www.instagram.com/ashokdey_" class="icon-link"
@@ -135,12 +112,8 @@
 							</svg>
 						</a></li>
 
-
 					<!-- Website link -->
-
-
 				</ul>
-
 			</div>
 
 			<div class="executive-summary" itemprop="description">
@@ -148,31 +121,23 @@
 					backends & frontends using Javascript, Node.js & React.js and I've used & optimized MySQL and REDIS data
 					storage</p>
 			</div>
-
-
-
-
 		</header>
-
 
 		<!-- begin Experience -->
 		<section class="content-section">
-
 			<header class="section-header">
 				<h2>Experience</h2>
 			</header>
-
-
 			<div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
 				<h3 class="resume-item-title" itemprop="name">Daalchini | Foodtech, IOT</h3>
-				<h4 class="resume-item-details" itemprop="description">Technical Lead &bull; Jan, 2019 &mdash; June, 2020</h4>
+				<h4 class="resume-item-details" itemprop="description">Product Engineer &bull; Jan, 2019 &mdash; June, 2020</h4>
 				<p class="resume-item-copy">
 				<ul class="resume-item-list">
 					<li>Scaled the system from 10k orders a month to 10k orders in a day!</li>
 					<li>Built a highly scalable data level ACL</li>
 					<li>Reduced Database CPU usage from 85% to 10%</li>
 					<li>Worked on payment & refund CRONs</li>
-					<li>Built the Software Architecture for both Backend & Frontend</li>
+					<li>Designed & built the System Architecture and UI for both Backend & Frontend</li>
 				</ul>
 				</p>
 			</div><!-- end of resume-item -->
@@ -185,8 +150,8 @@
 				<ul class="resume-item-list">
 					<li>Migrated legacy JavaScript code to ES6 standards</li>
 					<li>Built complete microservice with inter services ACL</li>
-					<li>Introduced Docker Compose for easy deployments</li>
-					<li>Introduced documentation and standard practices</li>
+					<li>Implemented Docker Compose for easy deployments</li>
+					<li>Designed & built documentation and standard practices</li>
 				</ul>
 				</p>
 			</div><!-- end of resume-item -->
@@ -200,16 +165,13 @@
 					<li>Built the SAAS app from scratch</li>
 					<li>Scaled product from 1k to 10k monthly users</li>
 					<li>Worked on caching, CRONS, notification and messaging features</li>
-					<li>Worked in a team of designer, android & iOS engineers</li>
+					<li>Worked on both the backend & frontend from scratch</li>
 				</ul>
 				</p>
 			</div><!-- end of resume-item -->
 
-
 		</section>
 		<!-- end Experience -->
-
-
 
 		<!-- begin Projects -->
 		<section class="content-section">
@@ -217,11 +179,10 @@
 				<h2>Projects</h2>
 			</header>
 
-
 			<div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
 				<meta itemprop="creator" content="Ashok Dey" itemtype="http://schema.org/Person" />
-				<h3 class="resume-item-title" itemprop="name"><a target="_blank" href="/opensource/"
-						itemprop="url">Knaxus.open</a></h3>
+				<h3 class="resume-item-title" itemprop="name"><a target="_blank" href="/opensource/" itemprop="url">Knaxus</a>
+				</h3>
 				<h4 class="resume-item-details" itemprop="description">Creator, Non-Profit &bull; Mar, 2014 &mdash; Present</h4>
 				<p class="resume-item-copy">Built over more than 10+ POCs, 5+ full fledged APIs, 3+ kits (used by startups)
 					using Node.js, React.js, web-components, PWAs, GraphQL, MySQL, MongoDB and REDIS. Mentored 30+ students,
@@ -253,18 +214,12 @@
 
 		</section>
 		<!-- end Projects -->
-
-
-
-
-
 		<!-- begin Associations -->
 		<section class="content-section">
 
 			<header class="section-header">
 				<h2>Talks & Presentations</h2>
 			</header>
-
 
 			<div class="resume-item" itemscope itemprop="memberOf" itemtype="http://schema.org/Organization">
 				<h3 class="resume-item-title" itemprop="name"><a href="https://twitter.com/kapeed07/status/1185529720592429057"
