update: CNAME added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<meta property="og:site_name" content="">
 	<meta property="og:title" content="Ashok Dey - Product Engineer">
 	<meta property="og:locale" content="en">
-	<meta property="og:image" content="">
+	<meta property="og:image" content="ashok.png" />
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://ashokdey.com">
 	<meta property="og:description" content="
