--- a/about/index.html
+++ b/about/index.html
@@ -90,9 +90,8 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 			</nav>
 		</header>
 		<article>
-			<h1>A short story..</h1>
 			<p><strong>Ashok Dey</strong> (AD), is a Product Engineer having 3 years of
-				experience building, maintaining and scaling successful SAAS based architectured B2B applications and tech
+				experience in building, maintaining and scaling successful SAAS based architectured B2B applications and tech
 				teams.
 			</p>
 			<p>
