--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 
 	<div class="wrap">
 		<header>
-			<a href="/" class="website-title"></a>
 			<nav>
 				<a href="/about">About</a>
 				<a href="/resume" target="_blank">Resume</a>
@@ -69,17 +68,15 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 		</header>
 		<article>
 			<h1>Ashok Dey</h1>
+			<br>
 			<p>
-				Welcome, to my totality on the web. I am a <strong>Technologist</strong> by profession and an
-				<strong>Engineer</strong> by heart.</p>
-			<p>
-				As a <strong> Product Engineer </strong> with 3 years of experience, I have built <strong> 5 scalable
-					software products </strong> and tech teams for <strong> Startups </strong> until now.
+				Welcome, to my totality on the web. Currently, I am a working as a <strong> Product Engineer </strong>.
 			</p>
+
 			<p>
-				I have also facilitated and volunteered software engineering mentorship to 100+ individuals from different
-				domains with 100% success via <strong><a href="https://knaxus.in" target="_blank">Knaxus</a></strong> and
-				<strong><a href="https://shred.work" target="_blank">ShredX</a></strong>
+				I also facilitated and volunteered software engineering mentorship via <strong><a href="https://knaxus.in"
+						target="_blank">Knaxus</a></strong> and <strong><a href="https://shred.work"
+						target="_blank">ShredX</a></strong>
 			</p>
 			<p>
 				All my open project repositories are located
