--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Ashok Dey | Product Engineer</title>
+	<title>Ashok Dey's Resume | Product Engineer</title>
 
 	<!-- Google font typography settings - defined in _config.yml -->
 
@@ -388,7 +388,13 @@
 
 
 		<footer class="page-footer">
-			&copy Ashok Dey 2020
+			<b>
+				&copy
+				<a style="text-decoration: none;" href="/">
+					Ashok Dey
+				</a>
+				2020
+			</b>
 		</footer>
 
 	</div>
