--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 			<h1>Ashok Dey</h1>
 			<br>
 			<p>
-				Welcome, to my totality on the web. Currently, I am a working as a <strong> Product Engineer </strong>.
+				Welcome, to my totality on the web. Currently, I am working as a <strong> Product Engineer </strong>.
 			</p>
 
 			<p>
