--- a/about/index.html
+++ b/about/index.html
@@ -27,9 +27,7 @@
 	<meta property="og:locale" content="en">
 
 
-	<meta property="og:image" content="">
-
-
+	<meta property="og:image" content="../ashok.png">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="/about/">
 	<meta property="og:description" content="
@@ -38,25 +36,14 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 ">
 	<!-- /og tags -->
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="/js/modernizr.js"></script>
-	<script src="/js/fitvids.js"></script>
 	<link
 		href='//fonts.googleapis.com/css?family=Source+Code+Pro:400,700|Source+Sans+Pro:600,900|Crimson+Text:700italic,600,600italic,400,700,400italic'
 		rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/css/reset.css">
 	<link rel="stylesheet" href="/css/pygments.css">
-
 	<link rel="stylesheet" href="/css/font-awesome.css">
-
 	<link rel="stylesheet" href="/css/style.css">
-	<!--[if gte IE 9]>
-  <style type="text/css">
-    .gradient {
-       filter: none;
-    }
-  </style>
-<![endif]-->
+
 	<style>
 		header {
 			margin-bottom: 40px;
@@ -76,11 +63,6 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 </head>
 
 <body>
-	<!-- Google Tag Manager (noscript) -->
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PCBTBDX" height="0" width="0"
-			style="display:none;visibility:hidden"></iframe></noscript>
-	<!-- End Google Tag Manager (noscript) -->
-
 	<div class="wrap">
 		<header>
 			<a href="/" class="website-title"></a>
@@ -159,7 +141,6 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 			</p>
 		</div>
 	</footer>
-
 </body>
 
 </html>
