--- a/about/index.html
+++ b/about/index.html
@@ -83,7 +83,7 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 
 			<h2 id="skills">Skills</h2>
 
-			<p>Ashok is having a solid understanding of Computer Science Engineering. He has developed scalable web
+			<p>Ashok is having a strrong foundation of Computer Science Engineering. He has developed scalable web
 				applications for various domains with strong hold on <strong>JavaScript</strong>, <strong>C++</strong> and
 				<strong>Golang</strong></p>
 
