--- a/about/index.html
+++ b/about/index.html
@@ -102,7 +102,7 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 
 			<p>He firmly believes in giving back to the community. Untill now he has delivered 20+ tech talks and 10+ live
 				code labs for students, professional software engineers and the developer community. Do have a look at free &
-				open communities created by him:
+				open communities he has volunteered so far:
 			</p>
 
 			<ul>
