--- a/index.html
+++ b/index.html
@@ -52,18 +52,21 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 			<h1>Ashok Dey</h1>
 			<br>
 			<p>
-				Welcome, to my totality on the web. Currently, I am working as a <strong> Product Engineer </strong>.
+				Welcome, to my totality on the web. I am a <strong>Product Engineer</strong>.
 			</p>
-
 			<p>
-				I also facilitated and volunteered software engineering mentorship via <strong><a href="https://knaxus.in"
+				<strong>
+					I have built 2 startup products from scratch!
+				</strong>
+			</p>
+			<p>
+				I have deep roots of <strong>Open Source </strong> and <strong>Mentorship</strong>
+				I have facilitated software engineering mentorship via <strong><a href="https://knaxusgithub.io"
 						target="_blank">Knaxus</a></strong> and <strong><a href="https://shred.work"
 						target="_blank">ShredX</a></strong>
 			</p>
 			<p>
-				All my open project repositories are located
-				on <strong><a href="https://github.com/ashokdey" target="_blank">GitHub (ashokdey)</a></strong>. We can interact
-				(almost about anything) over my email <strong><a href="mailto:ad@ashokdey.in">ad@ashokdey.in</a></strong>
+				<strong><a href="mailto:ad@ashokdey.in">ad@ashokdey.in</a></strong>, let's connect (almost about anything)
 			</p>
 
 		</article>
