--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 				</strong>
 			</p>
 			<p>
-				I have deep roots of <strong>Open Source </strong> and <strong>Mentorship</strong>
-				I have facilitated software engineering mentorship via <strong><a href="https://knaxusgithub.io"
-						target="_blank">Knaxus</a></strong> and <strong><a href="https://shred.work"
-						target="_blank">ShredX</a></strong>
+				I have deep roots of <strong>Open Source </strong> and <strong>Mentorship</strong>. I have facilitated software
+				engineering mentorship via <strong><a href="https://knaxus.github.io" target="_blank">Knaxus</a></strong> and
+				<strong><a href="https://shred.work" target="_blank">ShredX</a></strong>
 			</p>
 			<p>
 				<strong><a href="mailto:ad@ashokdey.in">ad@ashokdey.in</a></strong>, let's connect (almost about anything)
