update: strong for companies

--- a/about/index.html
+++ b/about/index.html
@@ -81,6 +81,18 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 				standarization and building the platform for the team.
 			</p>
 
+			<h2 id="experience">Experience</h2>
+
+			<p>Ashok started his journey of builidng software products after graduating with B.Tech in Computer Science &amp;
+				Engineering in 2016. Since then he is on a mission of learning building and, shapping software applications
+				and tech teams for startups. Here’s the footprints of his experiences so far:</p>
+
+			<ul>
+				<li><strong>Product Engineer, Daalchini</strong></li>
+				<li><strong>Senior Software Engineer, Oriserve</strong></li>
+				<li><strong>Senior Software Engineer, Classplus</strong></li>
+			</ul>
+
 			<h2 id="skills">Skills</h2>
 
 			<p>Ashok is having a strrong foundation of Computer Science Engineering. He has developed scalable web
@@ -108,18 +120,6 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 			<ul>
 				<li><a href="https://knaxus.in" target="_blank">Knaxus</a></li>
 				<li><a href="https://shredx.work" target="_blank">ShredX</a></li>
-			</ul>
-
-			<h2 id="experience">Experience</h2>
-
-			<p>Ashok started his journey of builidng software products after graduating with B.Tech in Computer Science &amp;
-				Engineering in 2016. Since then he is on a mission of learning building and, shapping software applications
-				and tech teams for startups. Here’s the footprints of his experiences so far:</p>
-
-			<ul>
-				<li>Product Engineer, Daalchini</li>
-				<li>Senior Software Engineer, Oriserve</li>
-				<li>Senior Software Engineer, Classplus</li>
 			</ul>
 
 			<h2 id="on-the-internet">On the Internet</h2>
