--- a/about/index.html
+++ b/about/index.html
@@ -83,9 +83,8 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 
 			<h2 id="experience">Experience</h2>
 
-			<p>Ashok started his journey of builidng software products after graduating with B.Tech in Computer Science &amp;
-				Engineering in 2016. Since then he is on a mission of learning building and, shapping software applications
-				and tech teams for startups. Here’s the footprints of his experiences so far:</p>
+			<p>Ashok graduated with a B.Tech in Computer Science and he enjoys building developer friendly & scalable
+				software products</p>
 
 			<ul>
 				<li><strong>Product Engineer, Daalchini</strong></li>
