--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 			</p>
 			<p>
 				<strong>
-					I have built 2 startup products from scratch!
+					I enjoy building developer friendly & scalable software products. I have built 2 startup products from
+					scratch!
 				</strong>
 			</p>
 			<p>
