--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 			</p>
 			<p>
 				<strong>
-					I enjoy building developer friendly & scalable software products. I have built 2 startup products from
-					scratch!
-				</strong>
+					I enjoy building developer friendly & scalable software products. </strong> I have built 2 startup products
+				from scratch!
 			</p>
 			<p>
 				I have deep roots of <strong>Open Source </strong> and <strong>Mentorship</strong>. I have facilitated software
