update: added image

--- a/about/index.html
+++ b/about/index.html
@@ -72,6 +72,7 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ software
 			</nav>
 		</header>
 		<article>
+			<img src="./ashok.png" alt="">
 			<p><strong>Ashok Dey</strong> (AD), is a Product Engineer having 3 years of
 				experience in building, maintaining and scaling successful SAAS based architectured B2B applications and tech
 				teams.
