--- a/resume/index.html
+++ b/resume/index.html
@@ -150,8 +150,6 @@
 				<ul class="resume-item-list">
 					<li>Migrated legacy JavaScript code to ES6 standards</li>
 					<li>Built complete microservice with inter services ACL</li>
-					<li>Implemented Docker Compose for easy deployments</li>
-					<li>Designed & built documentation and standard practices</li>
 				</ul>
 				</p>
 			</div><!-- end of resume-item -->
@@ -184,8 +182,8 @@
 				<h3 class="resume-item-title" itemprop="name"><a target="_blank" href="/opensource/" itemprop="url">Knaxus</a>
 				</h3>
 				<h4 class="resume-item-details" itemprop="description">Creator, Non-Profit &bull; Mar, 2014 &mdash; Present</h4>
-				<p class="resume-item-copy">Built over more than 10+ POCs, 5+ full fledged APIs, 3+ kits (used by startups)
-					using Node.js, React.js, web-components, PWAs, GraphQL, MySQL, MongoDB and REDIS. Mentored 30+ students,
+				<p class="resume-item-copy">Built over more than 10+ POCs, 5+ full fledged APIs, 3+ kits
+					using Node.js, React.js, web-components, PWAs, GraphQL, MySQL, MongoDB and REDIS. Mentored 50+ students,
 					collaborated with 30+ developers all around the world. All of the projects are open-sourced and are highly
 					appreciated by the community members.</p>
 			</div>
@@ -207,11 +205,9 @@
 				<h4 class="resume-item-details" itemprop="description">OpenSource, Primary Contributor &bull; Sept, 2019 &mdash;
 					Present</h4>
 				<p class="resume-item-copy">Collection of open source implementation of Data Structures, Algorithms & Interview
-					questions with Unit Tests and live CI/CD. The reop has received 200+ stars, 30+ contributors and 70+
+					questions with Unit Tests and live CI/CD. The repo has received 200+ stars, 30+ contributors and 70+
 					algorithmic problems</p>
 			</div>
-
-
 		</section>
 		<!-- end Projects -->
 		<!-- begin Associations -->
@@ -266,10 +262,6 @@
 		</section>
 		<!-- end Associations -->
 
-
-
-
-
 		<!-- begin Education -->
 		<section class="content-section">
 			<header class="section-header">
@@ -311,10 +303,6 @@
 		</section>
 		<!-- end Education -->
 
-
-
-
-
 		<!-- begin Links -->
 		<section class="content-section">
 
@@ -326,16 +314,12 @@
 				<ul class="resume-item-list">
 
 					<li><a href=https://dev.to/ashokdey_ itemprop="url">Dev.to</a></li>
-
 					<li><a href=https://stackoverflow.com/users/2804236/ashok-dey itemprop="url">StackOverflow</a></li>
 
 				</ul>
 			</div>
-
 		</section>
 		<!-- end Links -->
-
-
 
 		<!-- begin Print Social Links -->
 		<section class="content-section print-only">
@@ -345,47 +329,28 @@
 			</header>
 
 			<div class="resume-item">
-				<!-- and guess where these are defined? Yup, you guessed it: the _config.yml file -->
 
 				<ul>
-
 					<!-- GitHub link -->
-
 					<li><strong>Github</strong>: https://github.com/ashokdey/</li>
 
-
 					<!-- Twitter link -->
-
 					<li><strong>Twitter</strong>: https://twitter.com/intent/follow?screen_name=ashokdey_</li>
 
 
-					<!-- Dribbble link -->
-
-
-					<!-- Facebook link -->
-
-
 					<!-- LinkedIn link -->
-
 					<li><strong>LinkedIn</strong>: https://www.linkedin.com/in/ashokdey</li>
 
 
 					<!-- Instagram link -->
-
 					<li><strong>Instagram</strong>: https://www.instagram.com/ashokdey_</li>
 
 
 					<!-- Website link -->
-
-
 				</ul>
-
-
 			</div>
-
 		</section>
 		<!-- end Print Social Links -->
-
 
 		<footer class="page-footer">
 			<b>
@@ -396,9 +361,7 @@
 				2020
 			</b>
 		</footer>
-
 	</div>
-
 </body>
 
 </html>
