--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 			</p>
 			<p>
 				<strong>
-					I enjoy building developer friendly & scalable software products. </strong> I have built 2 startup products
-				from scratch!
+					I enjoy building developer friendly & scalable software products. </strong>
 			</p>
 			<p>
-				I have deep roots of <strong>Open Source </strong> and <strong>Mentorship</strong>. I have facilitated software
+				I have deep roots in <strong>Open Source </strong> and <strong>Mentorship</strong>. I have facilitated software
 				engineering mentorship via <strong><a href="https://knaxus.github.io" target="_blank">Knaxus</a></strong> and
 				<strong><a href="https://shred.work" target="_blank">ShredX</a></strong>
 			</p>
