--- a/index.html
+++ b/index.html
@@ -52,19 +52,21 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 			<h1>Ashok Dey</h1>
 			<br>
 			<p>
-				Welcome, to my totality on the web. I am a <strong>Product Engineer</strong>.
+				Welcome, to my totality on the web. I am a <strong>Software Engineer</strong>.
 			</p>
 			<p>
 				<strong>
-					I enjoy building developer friendly & scalable software products. </strong>
+					I enjoy building developer friendly scalable quality software products. </strong>
 			</p>
 			<p>
-				I have deep roots in <strong>Open Source </strong> and <strong>Mentorship</strong>. I have facilitated software
-				engineering mentorship via <strong><a href="https://knaxus.github.io" target="_blank">Knaxus</a></strong> and
+				I have deep roots in <strong>Open Source </strong> and <strong>Mentorship</strong>. I facilitate
+				software engineering mentorship and share my learnings via <strong><a href="https://knaxus.github.io"
+						target="_blank">Knaxus</a></strong> and
 				<strong><a href="https://shred.work" target="_blank">ShredX</a></strong>
 			</p>
 			<p>
-				<strong><a href="mailto:ad@ashokdey.in">ad@ashokdey.in</a></strong>, let's connect (almost about anything)
+				Let's connect <strong><a href="mailto:ad@ashokdey.in">ad@ashokdey.in</a></strong>! Feel free to drop me your
+				queries especially if you are a student. I will be more than happy to help you.
 			</p>
 
 		</article>
@@ -77,7 +79,6 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 			</p>
 		</div>
 	</footer>
-
 </body>
 
 </html>
