--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 				<strong><a href="https://shred.work" target="_blank">ShredX</a></strong>
 			</p>
 			<p>
-				Let's connect <strong><a href="mailto:ad@ashokdey.in">ad@ashokdey.in</a></strong>! Feel free to drop me your
-				queries especially if you are a student. I will be more than happy to help you.
+				Let's connect at <strong><a href="mailto:ad@ashokdey.in">ad@ashokdey.in</a></strong>! Feel free to drop me your
+				queries especially if you are a student, I will be more than happy to help you.
 			</p>
 
 		</article>
