up: content update

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 			<h1>Ashok Dey</h1>
 			<br>
 			<p>
-				Welcome, to my totality on the web. I am a <strong>Software Engineer</strong>.
+				Welcome, to my totality on the web. I am a <strong>Technologist</strong> working as a <strong>Software
+					Engineer</strong>.
 			</p>
 			<p>
 				<strong>
