--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@ Ashok Dey is a product engineer who has built, maintained and scaled 3+ SAAS sof
 					I enjoy building developer friendly scalable quality software products. </strong>
 			</p>
 			<p>
-				I have deep roots in <strong>Open Source </strong> and <strong>Mentorship</strong>. I facilitate
-				software engineering mentorship and share my learnings via <strong><a href="https://knaxus.github.io"
-						target="_blank">Knaxus</a></strong> and
-				<strong><a href="https://shred.work" target="_blank">ShredX</a></strong>
+				I facilitate software engineering mentorship and share my learnings via <strong><a
+						href="https://knaxus.github.io" target="_blank">Knaxus</a></strong>
 			</p>
 			<p>
 				Let's connect at <strong><a href="mailto:ad@ashokdey.in">ad@ashokdey.in</a></strong>! Feel free to drop me your
